stderr
   Compiling hiker v0.1.0 (/sandbox)
error[E0004]: non-exhaustive patterns: `'\0'..='.'`, `'0'..='\u{d7ff}'` and `'\u{e000}'..='\u{10ffff}'` not covered
  --> src/lib.rs:26:11
   |
26 |     match roll {
   |           ^^^^ patterns `'\0'..='.'`, `'0'..='\u{d7ff}'` and `'\u{e000}'..='\u{10ffff}'` not covered
   |
   = note: the matched value is of type `char`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as shown, or multiple match arms
   |
27 ~         '/'=>0,
28 +         '\0'..='.' | '0'..='\u{d7ff}' | '\u{e000}'..='\u{10ffff}' => todo!()
   |

For more information about this error, try `rustc --explain E0004`.
error: could not compile `hiker` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `hiker` (lib test) due to 1 previous error
